<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_15sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/allow_to_access_camera" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYes"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNo"
        app:layout_constraintTop_toTopOf="@+id/btnNo"
        app:rippleColor="@color/white"
        tools:text="@string/yes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNo"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toStartOf="@+id/btnYes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"
        app:rippleColor="@color/white"
        tools:text="@string/no" />


</androidx.constraintlayout.widget.ConstraintLayout>